Fixed menu z-index

--- a/css/style.css
+++ b/css/style.css
@@ -3184,7 +3184,8 @@ h1, h2, h3, .content--details dt, h4, h5, h6 {
 .nav--main {
   position: relative;
   text-align: right;
-  transition: 0.2s all ease-in-out; }
+  transition: 0.2s all ease-in-out;
+  z-index: 20; }
 
 .affix-top .nav--main {
   background: #330384;
