--- a/css/ui/_layout.scss
+++ b/css/ui/_layout.scss
@@ -59,6 +59,7 @@ body {
   position: relative;
   text-align: right;
   transition: 0.2s all ease-in-out;
+  z-index: 20;
 }
 
 .affix-top .nav--main {
